--- a/stack.yml
+++ b/stack.yml
@@ -1,13 +1,14 @@
 provider:
   name: faas
-  gateway: http://faas.srv.disarm.io
+  gateway: https://faas.srv.disarm.io
 functions:
-  fn-raster-vector-summary-stats_0_0_6:
+  fn-raster-vector-summary-stats:
     handler: ./fn-raster-vector-summary-stats
     lang: dockerfile
     image: disarm/fn-raster-vector-summary-stats:0.0.6
     environment:
-#      write_debug: true
-      write_timeout: 60
-      read_timeout: 60
+      write_debug: true
+      write_timeout: 70
+      read_timeout: 70
+      exec_timeout: 65
       combine_output: false
